@@ -2267,9 +2267,11 @@ static void read_post_actions(char *action, char **argum, SOAP_codex_t *codex){
 
 
 void read_post(char *argum, SOAP_codex_t *codex){
+/*
   long i,j,k;
   np_t *np_post;
   gl_t gl_post;
+*/
 #ifdef DISTMPI
   int rank;
   MPI_Barrier(MPI_COMM_WORLD);
@@ -2285,6 +2287,7 @@ void read_post(char *argum, SOAP_codex_t *codex){
   add_bdry_types_fluid_to_codex(codex);
 
   SOAP_process_code(argum, codex, SOAP_VARS_KEEP_ALL);
+/*
   np_post = ((readcontrolarg_t *)codex->action_args)->np_post;
   gl_post = ((readcontrolarg_t *)codex->action_args)->gl_post;
   for1DL ( i, gl_post.domain_lim.is, gl_post.domain_lim.ie )
@@ -2295,6 +2298,7 @@ void read_post(char *argum, SOAP_codex_t *codex){
     end2DL
   end1DL
   free ( np_post );
+*/
 }
 
 
